2008-08-14  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: remove help button as long as we don't have
	any help to show (bug #473181)

2008-08-12  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (conv_to_widget_cb), (prepare_list): when
	adding an unknown theme to the list because it has been selected use
	the corresponding default icon to represent it

2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main):
	* appearance-themes.c: (theme_drag_data_received_cb):
	* theme-installer.c: (gnome_theme_install),
	(gnome_theme_installer_run):
	* theme-installer.h: make theme installation from GIO-supported
	sources work (including drag and drop) (bug #545335)

2008-07-29  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (gnome_theme_install_from_uri): file transfer
	dialog now uses GFiles internally, so update the caller

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* theme-installer.c (cleanup_tmp_dir):
	* theme-util.c (theme_delete): Fix build for the previous change

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* theme-util.c:
	* theme-util.h: Remove the directory deletion helpers, and
	move them to the common sub-directory

2008-07-20  Jens Granseuer  <jensgr@gmx.net>

	* theme-util.c: (theme_delete): don't delete ~/.icons when deleting
	the last icon theme (bug #543763)

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 533611 - add notification themes to the metatheme format

	* appearance-themes.c: When loading a metatheme from GConf, read
	the notification theme from /apps/notification-daemon/theme.

	* appearance-theme-save.c: When saving a metatheme to disk,
	save the notification theme with the key NotificationTheme.

	* appearance-theme-util.h: Add a define for the GConf key
	used for notification theme.

2008-06-21  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* appearance-main.c: (main):
	* data/gnome-appearance-properties.desktop.in.in: use standard icon