@@ -1,3 +1,9 @@
+2008-08-22  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: (conv_to_widget_cb), (create_thumbnail),
+	(prepare_list): when a hidden theme is selected, and therefore
+	becomes visible, create a thumbnail for it (bug #547301)
+
 2008-08-14  Jens Granseuer  <jensgr@gmx.net>
 
 	* data/appearance.glade: remove help button as long as we don't have
